--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "tree-sitter-cli": "^0.19.4"
   },
   "scripts": {
-    "test": "tree-sitter test && node test.js"
+    "test": "tree-sitter test && node test.js",
+    "build": "tree-sitter generate"
   },
   "tree-sitter": [
     {
